--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
 					<div class="container">
 						<div class="cta-inner section-inner">
 							<h3 class="section-title mt-0">
-								Want to say some more Ideas?
+								Have an Idea?
 							</h3>
 							<div class="cta-cta">
 								<a
