--- a/index.html
+++ b/index.html
@@ -114,6 +114,32 @@
 							<div class="features-wrap">
 								<div class="feature text-center is-revealing">
 									<a
+										href="https://metabasket.thisisbipin.co/"
+										style="text-decoration: none"
+									>
+										<div class="feature-inner">
+											<div class="feature-icon">
+												<img
+													src="https://raw.githubusercontent.com/thisisbipin/decentralized-rating-system/master/docs/static/media/meta-basket-icon.f10b5d14.png"
+													style="background: white"
+													width="100px"
+													alt="Feature 01"
+												/>
+											</div>
+											<h4 class="feature-title mt-24">
+												Meta Basket
+											</h4>
+											<p class="text-sm mb-0">
+												Meta Basket is an online store
+												which has a Decentralized,
+												Blockchain Based, Secured and
+												Trusted Rating System.
+											</p>
+										</div>
+									</a>
+								</div>
+								<div class="feature text-center is-revealing">
+									<a
 										href="https://music.thisisbipin.co/"
 										style="text-decoration: none"
 									>
@@ -131,6 +157,31 @@
 											<p class="text-sm mb-0">
 												A minimal, simple music player
 												and audio visualizer.
+											</p>
+										</div>
+									</a>
+								</div>
+								<div class="feature text-center is-revealing">
+									<a
+										href="https://flower-plant-gorilla.glitch.me/"
+										style="text-decoration: none"
+									>
+										<div class="feature-inner">
+											<div class="feature-icon">
+												<img
+													src="https://raw.githubusercontent.com/thisisbipin/leetcode-tracker/master/frontend/build/favicon.ico"
+													width="100px"
+													alt="Feature 01"
+												/>
+											</div>
+											<h4 class="feature-title mt-24">
+												LeetCode Tracker
+											</h4>
+											<p class="text-sm mb-0">
+												Tired of viewing the Leetcode
+												profiles one at a time? Track
+												multiple Leetcode profiles
+												simultaneously.
 											</p>
 										</div>
 									</a>
@@ -183,9 +234,7 @@
 				<section class="cta section">
 					<div class="container">
 						<div class="cta-inner section-inner">
-							<h3 class="section-title mt-0">
-								Have an Idea?
-							</h3>
+							<h3 class="section-title mt-0">Have an Idea?</h3>
 							<div class="cta-cta">
 								<a
 									class="button button-primary button-wide-mobile"
