updated some settings

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 								<div class="hero-cta">
 									<a
 										class="button button-primary"
-										href="mailto:bipinmjadav087@yahoo.com"
+										href="mailto:me@thisisbipin.co"
 										>Get in Touch</a
 									>
 								</div>
@@ -238,7 +238,7 @@
 							<div class="cta-cta">
 								<a
 									class="button button-primary button-wide-mobile"
-									href="mailto:bipinmjadav087@yahoo.com"
+									href="mailto:me@thisisbipin.co"
 									>Get in touch</a
 								>
 							</div>
@@ -261,9 +261,7 @@
 						</div>
 						<ul class="footer-links list-reset">
 							<li>
-								<a href="mailto:bipinmjadav087@yahoo.com"
-									>Contact</a
-								>
+								<a href="mailto:me@thisisbipin.co">Contact</a>
 							</li>
 							<li>
 								<a href="#">FAQ's</a>
